2013-11-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/system.c, misc/system.h, misc/system_internal.h: Remove unused
	funtion estrlen.

2013-11-06  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/plugutils.c (plug_set_replace_key): Add switch variable to output
	debug info to stderr.

	* nasl/nasl.c (main): Set global_nasl_debug variable when -d flag is
	set.

	* doc/openvas-nasl.1: Update documentation.

2013-10-30  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_hosts.c (openvas_hosts_new): Break in uninitialized
	ips_func variable case. Fixes build on gcc 4.8.

2013-10-30  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_compress.c (openvas_compress, openvas_uncompress):
	Refactor code and fix single step compress/uncompress. Fix memory leaks
	in inflate/deflate internal structures.

2013-10-29  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/nasl_scanner_glue.c (script_description): Added note under
	which condition it can be removed.

	* nasl/nasl_init.c: Added note here accordingly.

2013-10-29  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_compress.c (openvas_compress, openvas_uncompress):
	Unconstify src pointer when z_const is not defined to fix building on
	with older zlib versions.

2013-10-29  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_compress.h: Fix define typo.

2013-10-29  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* base/openvas_compress.c: Define ZLIB_CONST so that z_const is defined
	as const.
	(openvas_compress): Use deflateInit and deflate instead of compress
	call. Adjust stream initialization and error handling accordingly.
	(openvas_uncompress): Use inflateInit2 and inflate with automatic header
	detection when decoding zlib/gzip format. Adjust stream initialization
	and error handling accordingly.

	* base/openvas_compress.h: Add macro check to prevent multiple includes.
