@@ -135,6 +135,10 @@ unsigned int
 openvas_hosts_removed (const openvas_hosts_t *);
 
  /* openvas_host_t related */
+
+int
+openvas_host_in_hosts (const openvas_host_t *, const openvas_hosts_t *);
+
 gchar *
 openvas_host_type_str (const openvas_host_t *);
 
